--- a/Gestor_Clinico_Colegio/Gestor_Clinico_Colegio.csproj
+++ b/Gestor_Clinico_Colegio/Gestor_Clinico_Colegio.csproj
@@ -106,19 +106,19 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="About.aspx" />
-    <Content Include="Paginas\Buscador.aspx" />
     <Content Include="Contact.aspx" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Site.css" />
-    <Content Include="Paginas\Buscador1.aspx" />
+    <Content Include="Img\PlusIcon.png" />
+    <Content Include="Paginas\Buscador.aspx" />
+    <Content Include="Paginas\CompraBono.aspx" />
     <Content Include="Paginas\Default.aspx" />
     <Content Include="favicon.ico" />
     <Content Include="Paginas\FichaPaciente.aspx" />
     <Content Include="Paginas\Agenda.aspx" />
-    <Content Include="Paginas\AgendarAtencion.aspx" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
@@ -130,6 +130,7 @@
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="Inicio.Master" />
+    <Content Include="bu-de- CIE-10.xls" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Img\CIE 10.png" />
     <Content Include="Img\derivacion.png" />
@@ -142,6 +143,9 @@
     <Content Include="Img\receta.png" />
     <Content Include="Img\telemedicina.png" />
     <Content Include="Img\user-icon.png" />
+    <Content Include="Paginas\Login.aspx" />
+    <Content Include="Paginas\MisSolicitudes.aspx" />
+    <Content Include="Paginas\WebForm1.aspx" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
@@ -186,13 +190,6 @@
       <DependentUpon>About.aspx</DependentUpon>
     </Compile>
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="Paginas\Buscador.aspx.cs">
-      <DependentUpon>Buscador.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Paginas\Buscador.aspx.designer.cs">
-      <DependentUpon>Buscador.aspx</DependentUpon>
-    </Compile>
     <Compile Include="Contact.aspx.cs">
       <DependentUpon>Contact.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -200,12 +197,19 @@
     <Compile Include="Contact.aspx.designer.cs">
       <DependentUpon>Contact.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Paginas\Buscador1.aspx.cs">
-      <DependentUpon>Buscador1.aspx</DependentUpon>
+    <Compile Include="Paginas\Buscador.aspx.cs">
+      <DependentUpon>Buscador.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Paginas\Buscador1.aspx.designer.cs">
-      <DependentUpon>Buscador1.aspx</DependentUpon>
+    <Compile Include="Paginas\Buscador.aspx.designer.cs">
+      <DependentUpon>Buscador.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Paginas\CompraBono.aspx.cs">
+      <DependentUpon>CompraBono.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Paginas\CompraBono.aspx.designer.cs">
+      <DependentUpon>CompraBono.aspx</DependentUpon>
     </Compile>
     <Compile Include="Paginas\Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
@@ -235,15 +239,29 @@
     <Compile Include="Paginas\Agenda.aspx.designer.cs">
       <DependentUpon>Agenda.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Paginas\AgendarAtencion.aspx.cs">
-      <DependentUpon>AgendarAtencion.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Paginas\AgendarAtencion.aspx.designer.cs">
-      <DependentUpon>AgendarAtencion.aspx</DependentUpon>
-    </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
+    <Compile Include="Paginas\Login.aspx.cs">
+      <DependentUpon>Login.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Paginas\Login.aspx.designer.cs">
+      <DependentUpon>Login.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Paginas\MisSolicitudes.aspx.cs">
+      <DependentUpon>MisSolicitudes.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Paginas\MisSolicitudes.aspx.designer.cs">
+      <DependentUpon>MisSolicitudes.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Paginas\WebForm1.aspx.cs">
+      <DependentUpon>WebForm1.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Paginas\WebForm1.aspx.designer.cs">
+      <DependentUpon>WebForm1.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Intranet.Master.cs">
